challenge test updated